--- a/android/app/src/main/res/layout/bottom_sheet_club_recruitment.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_club_recruitment.xml
@@ -2,14 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rect_white_fill_10"
         android:orientation="vertical"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="24dp">
+        android:paddingEnd="16dp">
 
         <TextView
             android:id="@+id/btn_club_open"
