--- a/android/app/src/main/res/layout/item_detail_profile.xml
+++ b/android/app/src/main/res/layout/item_detail_profile.xml
@@ -15,6 +15,7 @@
         onSingleClick="@{()->navigation.navigateToProfile(profile)}"
         android:layout_marginEnd="10dp"
         android:layout_width="80dp"
+        android:background="@drawable/ripple_rect_fill8_white"
         android:layout_height="wrap_content">
         <com.google.android.material.imageview.ShapeableImageView
             android:src="@drawable/img_profile_normal"
