feat: 강아지 선택 리플 적용

--- a/android/app/src/main/res/layout/item_club_select_profile.xml
+++ b/android/app/src/main/res/layout/item_club_select_profile.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:background="@color/white"
+            android:background="@drawable/ripple_rect_fill16_white"
             android:scaleType="centerCrop"
             tools:src="@drawable/img_acorm" />
 
