--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -16,18 +16,42 @@
         android:id="@+id/register_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/coral30"
+        android:background="@drawable/login_background"
         android:orientation="vertical"
         tools:context=".presentation.ui.register.RegisterActivity">
 
+
         <ImageView
-            android:layout_width="match_parent"
+            android:id="@+id/iv_register_friendogly_logo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/img_login_main"
-            app:layout_constraintBottom_toTopOf="@+id/ib_kakao_register"
+            android:src="@drawable/ic_login_friendogly_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.26" />
+
+        <ImageView
+            android:id="@+id/iv_register_friendogly_dog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_login_dog_logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_register_friendogly_logo" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:gravity="center"
+            android:text="@string/register_friendogly_description"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_register_friendogly_dog" />
 
         <ImageButton
             android:id="@+id/ib_kakao_register"
@@ -57,9 +81,9 @@
             android:layout_marginBottom="24dp"
             android:adjustViewBounds="true"
             android:padding="0dp"
-            android:visibility="gone"
             android:scaleType="fitCenter"
             android:src="@drawable/img_google_register"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
