feat: 내 발자국 삭제 및 산책 종료 기능 구현

--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -286,7 +286,7 @@
 
         <ImageButton
             android:id="@+id/btn_woof_mark"
-            markBtnVisibility="@{vm.myWalkStatus.walkStatus}"
+            markBtnVisibility="@{vm.myWalkStatus}"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="12dp"
