--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -171,10 +171,10 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_location"
+            locationBtnMarginBottom="@{vm.myWalkStatus}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="32dp"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
             app:layout_constraintStart_toStartOf="parent">
@@ -189,10 +189,10 @@
 
         <FrameLayout
             android:id="@+id/btn_woof_location"
+            locationBtnMarginBottom="@{vm.myWalkStatus}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="32dp"
             android:onClick="@{() -> actionHandler.clickLocationBtn()}"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
             app:layout_constraintStart_toStartOf="parent" />
@@ -220,7 +220,7 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/rect_coral10_fill_50"
             android:elevation="10dp"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:visibility="visible">
 
