--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -211,6 +211,22 @@
             app:layout_constraintBottom_toTopOf="@id/btn_woof_location"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <ImageButton
+            android:id="@+id/btn_woof_walk_help"
+            myWalkStatusVisibility="@{vm.myWalkStatus}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/rect_coral10_fill_50"
+            android:padding="6dp"
+            android:onClick="@{() -> actionHandler.clickWalkHelp()}"
+            android:elevation="10dp"
+            android:src="@drawable/ic_help_coral500"
+            app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_walk"
             myWalkStatusVisibility="@{vm.myWalkStatus}"
@@ -391,7 +407,7 @@
             android:paddingHorizontal="6dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/tv_woof_register_walk_area"
@@ -412,7 +428,7 @@
                 android:layout_marginStart="8dp"
                 android:backgroundTint="@color/transparent"
                 android:onClick="@{() -> actionHandler.clickRegisterHelp()}"
-                android:src="@drawable/ic_help"
+                android:src="@drawable/ic_help_coral400"
                 app:layout_constraintBottom_toBottomOf="@id/tv_woof_register_walk_area"
                 app:layout_constraintStart_toEndOf="@id/tv_woof_register_walk_area"
                 app:layout_constraintTop_toTopOf="@id/tv_woof_register_walk_area" />
@@ -421,10 +437,11 @@
             <TextView
                 android:id="@+id/tv_woof_address"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:text="@{vm.addressLine}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walk_area"
