--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -19,12 +19,17 @@
     <color name="gray50">#FAFAFA</color>
 
     <color name="coral700">#C72811</color>
+    <color name="coral600">#E0402B</color>
     <color name="coral500">#F7634E</color>
     <color name="coral400">#FF7C6B</color>
     <color name="coral300">#FA9487</color>
+    <color name="coral200">#F8B0A3</color>
+    <color name="coral150">#F7C8BD</color>
     <color name="coral100">#F6D0CB</color>
     <color name="coral50">#FFEBE9</color>
     <color name="coral30">#FFF5F3</color>
+    <color name="coral10">#FFF5F3</color>
+    <color name="coral05">#FFF9F8</color>
 
     <color name="blue">#8AABFF</color>
     <color name="map_circle">#1A6568EB</color>
