--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -79,6 +79,13 @@
         <item name="android:textColor">@color/gray700</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.Gray08.Size26" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textSize">26dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+        <item name="android:textColor">@color/gray700</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.SemiBold.Gray09.Size18" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray800</item>
         <item name="android:textSize">18dp</item>
@@ -126,6 +133,20 @@
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/pretendard_semi_bold</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Gray05.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/gray500</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Gray06.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/gray600</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
     </style>
 
     <style name="Theme.AppCompat.TextView.SemiBold.Gray05.Size16" parent="@style/Widget.AppCompat.TextView">
@@ -425,6 +446,41 @@
     <style name="Theme.AppCompat.TextView.SemiBold.Black.Size25" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">25dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral300.Size16" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral300</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral400.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral400</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral500.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral400</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral400.Size20" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral400</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral400.Size22" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral400</item>
+        <item name="android:textSize">22dp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/pretendard_semi_bold</item>
     </style>
