refactor: 디자인 수정

--- a/android/app/src/main/res/layout/activity_club_detail.xml
+++ b/android/app/src/main/res/layout/activity_club_detail.xml
@@ -61,7 +61,7 @@
                 android:backgroundTint="@color/coral30"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_club_normal"
-                app:glide="@{vm.club.clubPoster}"
+                app:clubGlide="@{vm.club.clubPoster}"
                 app:layout_constraintBottom_toTopOf="@+id/view_club_detail_user_top_bar"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
