--- a/android/app/src/main/res/layout/item_club.xml
+++ b/android/app/src/main/res/layout/item_club.xml
@@ -18,14 +18,14 @@
         onSingleClick="@{()->actionHandler.loadClub(club.clubId)}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rect_gray_fill_radius8"
-        android:layout_marginVertical="5dp">
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/rect_gray_fill_radius8">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="@drawable/ripple_rect_fill8_white"
-            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/ripple_rect_fill8_white"
+            android:padding="10dp">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_club_list_poster"
@@ -34,7 +34,7 @@
                 android:background="@drawable/rect_gary03_fill_12"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_club_normal"
-                app:glide="@{club.clubPoster}"
+                app:clubGlide="@{club.clubPoster}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toStartOf="@id/ll_club_list_main_content"
@@ -45,13 +45,13 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_club_list_main_content"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:orientation="vertical"
                 android:paddingStart="3dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/iv_club_list_poster"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_club_list_poster"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="@id/iv_club_list_poster">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_club_list_filter_list"
@@ -59,6 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:orientation="horizontal"
+                    android:visibility="gone"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toTopOf="@id/tv_club_list_club_state"
                     app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +76,7 @@
                     app:clubStateText="@{club.clubState}"
                     app:clubStateTextStyle="@{club.clubState}"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rcv_club_list_filter_list"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size14"
                     tools:text="모집중" />
 
@@ -91,7 +92,7 @@
                     android:text="@{club.title}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_club_list_club_state"
-                    app:layout_constraintTop_toBottomOf="@id/rcv_club_list_filter_list"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="모임해요~" />
 
                 <TextView
@@ -100,7 +101,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:ellipsize="end"
                     android:maxLines="1"
