--- a/android/app/src/main/res/layout/item_selected_filter_menu.xml
+++ b/android/app/src/main/res/layout/item_selected_filter_menu.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
-        android:background="@drawable/rect_coral100_fill_12"
+        android:background="@drawable/rect_coral30_fill_8"
         android:paddingHorizontal="13dp"
         android:paddingVertical="6dp">
 
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingEnd="5dp"
+            android:textColor="@color/coral400"
             android:text="@{clubFilter.filterName}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +39,11 @@
         <ImageView
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:backgroundTint="@color/white"
             android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_club_list_filter_name"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:tint="@color/coral400"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
