--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -400,7 +400,7 @@
             android:id="@+id/layout_woof_register_marker"
             registeringVisibilityAnimation="@{vm.uiState}"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="208dp"
             android:layout_margin="12dp"
             android:background="@drawable/rect_white_fill_30"
             android:elevation="10dp"
@@ -445,7 +445,7 @@
                 android:text="@{vm.addressLine}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walk_area"
-                tools:text="서울 송파구 올림픽로35다길 42" />
+                tools:text="서울 송파구 올림픽로35다길 42서울 송파구 올림픽로35다길 42" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_woof_register_footprint"
