--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -24,26 +24,7 @@
         <com.naver.maps.map.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp">
-
-            <ImageButton
-                android:id="@+id/btn_woof_back"
-                style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
-                registeringVisibility="@{vm.uiState}"
-                android:layout_width="46dp"
-                android:layout_height="46dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/rect_coral400_fill_12"
-                android:elevation="10dp"
-                android:gravity="center"
-                android:onClick="@{() -> actionHandler.clickBackBtn()}"
-                android:src="@drawable/ic_arrow_left_white"
-                android:visibility="invisible" />
-        </com.naver.maps.map.MapView>
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/btn_woof_status_all"
@@ -153,6 +134,23 @@
             app:layout_constraintTop_toBottomOf="@id/btn_woof_status_before" />
 
         <ImageButton
+            android:id="@+id/btn_woof_back"
+            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
+            registeringVisibility="@{vm.uiState}"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rect_coral400_fill_12"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickBackBtn()}"
+            android:src="@drawable/ic_arrow_left_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="invisible" />
+
+        <ImageButton
             android:id="@+id/btn_woof_close"
             style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
             registeringVisibility="@{vm.uiState}"
@@ -220,9 +218,9 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/rect_coral10_fill_50"
-            android:padding="6dp"
-            android:onClick="@{() -> actionHandler.clickWalkHelp()}"
             android:elevation="10dp"
+            android:onClick="@{() -> actionHandler.clickWalkHelp()}"
+            android:padding="6dp"
             android:src="@drawable/ic_help_coral500"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -441,8 +439,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:text="@{vm.addressLine}"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walk_area"
                 tools:text="서울 송파구 올림픽로35다길 42서울 송파구 올림픽로35다길 42" />
