--- a/android/app/src/main/res/layout/activity_register_pet.xml
+++ b/android/app/src/main/res/layout/activity_register_pet.xml
@@ -60,7 +60,7 @@
                 android:layout_width="158dp"
                 android:layout_height="158dp"
                 android:layout_marginTop="80dp"
-                android:src="@drawable/ic_add_black"
+                android:src="@drawable/ic_add_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar" />
